--- a/red-bicicletas/views/bicicletas/index.pug
+++ b/red-bicicletas/views/bicicletas/index.pug
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-  a(href="/bicicletas/create") Nueva Bicicleta 
+  a(href="/bicicletas/create") Nueva Bicicleta  
   table.table 
     thead
       tr
@@ -25,3 +25,4 @@ block content
               input(type='hidden' name='id' value=bici.id)
               button.link-button(type='submit' name='submit_param' value='submit_value' class='btn')
                 = 'Eliminar'
+  a(href="/") Regresar a menu principal
