--- a/red-bicicletas/views/index.pug
+++ b/red-bicicletas/views/index.pug
@@ -4,36 +4,33 @@ block content
   // Navigation
   nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top
     .container.px-4.px-lg-5
-      a.navbar-brand(href='#page-top') Start Bootstrap
+      a.navbar-brand(href='#page-top') Proyecto de Coursera
       button.navbar-toggler.navbar-toggler-right(type='button' data-bs-toggle='collapse' data-bs-target='#navbarResponsive' aria-controls='navbarResponsive' aria-expanded='false' aria-label='Toggle navigation')
         | Menu
         i.fas.fa-bars
       #navbarResponsive.collapse.navbar-collapse
         ul.navbar-nav.ms-auto
           li.nav-item
-            a.nav-link(href='#about') About
+            a.nav-link(href='#about') Acerca de
           li.nav-item
-            a.nav-link(href='#projects') Projects
+            a.nav-link(href='#projects') Proyectos
           li.nav-item
-            a.nav-link(href='#signup') Contact
+            a.nav-link(href='#signup') Contacto
   // Masthead
   header.masthead
     .container.px-4.px-lg-5.d-flex.h-100.align-items-center.justify-content-center
       .d-flex.justify-content-center
         .text-center
           h1.mx-auto.my-0.text-uppercase Red Bicicletas
-          h2.text-white-50.mx-auto.mt-2.mb-5 A free, responsive, one page Bootstrap theme created by Start Bootstrap.
-          a.btn.btn-primary(href='#about') Get Started
+          h2.text-white-50.mx-auto.mt-2.mb-5 Nota: checar endpoints disponibles en README. Funcionalidad disponible: agregar datos a mapa y arreglo de bicicletas.
+          a.btn.btn-primary(href='#map') Mapa
   // About
   section#about.about-section.text-center
     .container.px-4.px-lg-5
       .row.gx-4.gx-lg-5.justify-content-center
         .col-lg-8
-          h2.text-white.mb-4 Built with Bootstrap 5
-          p.text-white-50
-            | Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            a(href='https://startbootstrap.com/theme/grayscale/') the preview page.
-            |                             The theme is open source, and you can use it for any purpose, personal or commercial.
+          h2.text-white.mb-4 Links:
+          a.btn.btn-primary(href='/bicicletas') Bicicletas
       img.img-fluid(src='/assets/img/ipad.png' alt='...')
   // Projects
   section#projects.projects-section.bg-light
