Added data persistance using mongoose, updated tests and views.

--- a/week2-red-bicicletas/views/bicicletas/index.pug
+++ b/week2-red-bicicletas/views/bicicletas/index.pug
@@ -14,15 +14,15 @@ block content
     tbody
       each bici in bicis
         tr
-          td(scope='row')= bici.id 
+          td(scope='row')= bici.code 
           td= bici.color
           td= bici.modelo
           td= bici.ubicacion
           td
-            a(href= '/bicicletas/' + bici.id + '/update') Editar
+            a(href= '/bicicletas/' + bici.code + '/update') Editar
           td
-            form.inline(method='post' action='bicicletas/' + bici.id + '/delete')
-              input(type='hidden' name='id' value=bici.id)
+            form.inline(method='post' action='bicicletas/' + bici.code + '/delete')
+              input(type='hidden' name='id' value=bici.code)
               button.link-button(type='submit' name='submit_param' value='submit_value' class='btn')
                 = 'Eliminar'
   a(href="/") Regresar a menu principal
